# Web-Migration-Assistant

./: .gitignore  README.md  pyproject.toml
notebooks/: chat.ipynb  proverb.ipynb  test-convert.ipynb
web_migration_assistant/: scaffhold.py  vue_to_react_templates.py
